# EmbeddedSystemClass

./: EmbeddedSystemProject.docx  EmbeddedSystemProject_new.docx  README.md
Project_LedControl_Unit/: .cproject  .mxproject  .project  Proje_LedControl_Unit Debug.launch  Proje_LedControl_Unit.ioc
Project_LedControl_Unit/Core/Inc/: StateLed.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h
Project_LedControl_Unit/Debug/: Proje_LedControl_Unit.elf  Proje_LedControl_Unit.list  Proje_LedControl_Unit.map  makefile  objects.list
Project_MaxMinRangeControl_Unit_/: .cproject  .mxproject  .project  023_HAL_CAN_HC-SR04_SEND_DATA Debug.launch  PROJE_HAL_CAN_HC-SR04_SEND_RECEIVE_PWM_DISC Debug.launch  Proje_MaxMinRangeControl_Unit Debug.launch  Proje_MaxMinRangeControl_Unit.ioc
Project_MaxMinRangeControl_Unit_/Debug/: Proje_MaxMinRangeControl_Unit.elf  Proje_MaxMinRangeControl_Unit.list  Proje_MaxMinRangeControl_Unit.map  makefile  objects.list
Project_MotorSpeedControl_Unit/: .cproject  .mxproject  .project  HAL_NUCLEO_ADC Debug.launch  HAL_NUCLEO_ADC_PWM_CAN Debug.launch  PROJE_HAL_CAN_SEND_ADC_PWM_NUCLEO Debug.launch  Proje_MotorSpeedControl_Unit Debug.launch  Proje_MotorSpeedControl_Unit.ioc
Project_MotorSpeedControl_Unit/Debug/: Proje_MotorSpeedControl_Unit.elf  Proje_MotorSpeedControl_Unit.list  Proje_MotorSpeedControl_Unit.map  makefile  objects.list
googletest/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  executeTests
googletest/include/: CAN_Tx_Rx.h  StateLed.h
googletest/src/: CAN_Tx_Rx.c  MotorServoControl.c  StateTest.cpp  ledcontrol.c
(+104 files in other folders)
